# python-template

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: Makefile  README.md  pyproject.toml
{{cookiecutter.repo_name}}/tests/: test_main.py
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: __init__.py  __main__.py  config.py
