[project]
name = "{{cookiecutter.package_name}}"
version = "0.1"
dependencies = [
    "dynaconf",   # Config files
    "click"       # CLI interface
]
authors = [
    { name = "{{cookiecutter.full_name}}" },
]
description = """{{cookiecutter.description}}"""
readme = "README.md"
license = {file = "LICENSE"}
keywords = []

[project.optional-dependencies]
Test = [
    "pytest",     # Tests
    "pytest-cov", # Code coverage
]

[tool.setuptools]
packages = ["{{cookiecutter.package_name}}"]

[project.scripts]
{{cookiecutter.binary_name}} = "{{cookiecutter.package_name}}.__main__:main"
